# aminer-core-1

./: .gitignore  CMakeLists.txt  README.md  index.html  params.json
doc/: db.md
doc/reports/: review-2013-9.md
importer/db/: AuthorInterestDao.cpp  AuthorInterestDao.h  AuthorRelationDao.cpp  CitationDao.h  ConnectionPool.hpp  MergedAuthorDao.cpp
importer/importer/: CMakeLists.txt  act_adapter.cpp  act_adapter.h  aminer_importer.cpp  author_adapter.cpp  author_relation.h  contact_adapter.hpp  data_importer.cpp  index_resource.h  naid_map.cpp  name2author_map.cpp  name2author_map.hpp
scripts/: rank.py  run.sh
service/: .indexed_graph.hpp.swp  .pub_service.cpp.swp  CMakeLists copy.txt  CMakeLists.txt  act_data.cpp  act_data.hpp  act_service.cpp  act_service.hpp  aminer.hpp  aminer_data.hpp  author_service.cpp  conf_service.cpp  entity_searcher.hpp  indexed_graph.hpp  indexed_graph_cache.hpp  interface.proto  main.cpp  pub_service.cpp  search_service.cpp  search_service.hpp  thread_util.hpp
service/app/search/: SocialGraphSearch.cpp  SocialGraphSearch.h
service/util/: ConfigFile.cpp  ConfigFile.h  Logger.h
src/: CMakeLists.txt  interface.proto  main.cpp  rpc.proto
src/db/: Author2ContactDao.cpp  Author2ContactDao.h  Author2pubDao.cpp  Author2pubDao.h  AuthorFeatureDao.cpp  AuthorFeatureDao.h  AuthorRelationDao.h  CitationDao.cpp  DbUtil.cpp  DbUtil.h  MergedAuthorDao.h
src/importer/: CMakeLists.txt  aminer_importer.cpp  aminer_service.cpp  author_adapter.h  author_adapter_update.cpp  author_relation.cpp  author_task.cpp  author_task.hpp  contact_adapter.cpp  csv_reader.hpp  data_importer.hpp  index_resource.cpp  jconf_map.cpp  jconf_map.hpp  naid_map.hpp
src/org/iminer/services/datacenter/: Mashaler.java
src/org/iminer/services/datacenter/rpc/: ArnetMinerRpc.java
src/search/: CMakeLists.txt  aminer_data.hpp  entity_searcher.hpp  event.cpp  event.hpp  indexed_graph.hpp
src/service/: CMakeLists.txt  search_service.cpp  search_service.hpp
src/service/old/: act_service.cpp  act_service.h  app_service.cpp  app_service.h  author_service.cpp  author_service.hpp  conf_service.cpp  conf_service.h  interface_utils.cpp  interface_utils.h  interface_utils.hpp  org_service.cpp  org_service.h  process_query.cpp  process_query.hpp  pub_service.cpp  pub_service.h  search_filter.cpp  search_filter.hpp
src/util/: Atomic.h  MemGC.cpp  MemGC.h  Timer.h  stringutils.h  threads.h
